--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-31",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node sweetwater.js"
   },
   "dependencies": {
     "express": "3.3.3",
